# Giskard

./: .coderabbit.yaml  .dockerignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  deny.toml
.github/workflows/: audit.yml  ci.yml  e2e.yml
crates/giskard-core/: Cargo.toml
crates/giskard-core/src/: approval.rs  diff.rs  error.rs  event.rs  ids.rs  item.rs  lib.rs  mcp.rs  model.rs  server_request.rs  text.rs  thread.rs  token.rs  turn.rs  user_input.rs
crates/giskard-harness/: Cargo.toml
crates/giskard-harness-codex/: Cargo.toml  README.md
crates/giskard-harness-codex/src/: lib.rs  mapping.rs  transport.rs
crates/giskard-harness-replay/: Cargo.toml
crates/giskard-harness-replay/src/: lib.rs
crates/giskard-harness-replay/tests/: replay_integration.rs
crates/giskard-harness/src/: lib.rs
crates/giskard-persist/: Cargo.toml
crates/giskard-persist/src/: atomic.rs  config.rs  lib.rs  store.rs
crates/giskard-persist/tests/: giskard_admin.rs
crates/giskard-proto/: Cargo.toml
crates/giskard-proto/src/: lib.rs  wire.rs
crates/giskard-server/: Cargo.toml  build.rs
crates/giskard-server/src/: app.rs  auth.rs  headers.rs  highlight.rs  hub.rs  ledger.rs  lib.rs  linkify.rs  live_buffer.rs  markdown.rs  models.rs  plan.rs  registry.rs  routes.rs  running_commands.rs  thread_graph.rs  throttle.rs  tokens.rs  trace.rs
crates/giskard-server/static/: app.css  app.js  index.html  sw.js
crates/giskard-server/tests/: approval_reconnect.rs  code_overlay.rs  diff_accumulation.rs  e2e_smoke.rs  history_sync.rs  interrupt.rs  model_refresh.rs  override_propagation.rs  phase3.rs  phase4.rs  phase5.rs  project_models.rs  provider_switch.rs  read_only_thread.rs  running_tasks.rs  security.rs  server_requests.rs  thread_lifecycle.rs  token_ledgers.rs  trace.rs  turn_controls.rs  ui.rs
crates/giskard-ui/: Cargo.toml
crates/giskard-ui/src/: lib.rs
docs/: subagents.md
specs/: giskard-specification.md  model-provider-switching-analysis.md
tests/e2e/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  run.sh  screenshots.config.ts  screenshots.sh
tests/e2e/screenshots/: ide-theme.ts
tests/e2e/tests/: approvals.spec.ts  helpers.ts  login.spec.ts  settings.spec.ts  subagents.spec.ts  thread-selection.spec.ts  thread.spec.ts
