[package]
name = "giskard-harness-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
giskard-core = { workspace = true }
giskard-harness = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
codex-codes = { version = "0.143.2", features = ["async-client"] }
