[package]
name = "giskard-harness-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
giskard-core = { workspace = true }
giskard-harness = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
giskard-persist = { workspace = true }
