[package]
name = "giskard-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
giskard-core = { workspace = true }
giskard-harness = { workspace = true }
giskard-harness-codex = { workspace = true }
giskard-harness-replay = { workspace = true }
giskard-persist = { workspace = true }
giskard-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
time = "0.3"
syntect = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pulldown-cmark = { version = "0.13.4", default-features = false }

[build-dependencies]
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-tungstenite = "0.29"
futures-util = "0.3"
